--- a/index.html
+++ b/index.html
@@ -115,10 +115,21 @@
             <h3>
             <a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>EXAMPLES</h3>
 
-            <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+            <div class="examples">
+              <div>
+                <img src="images/300.jpg" data-blurit data-blurit-transform='replace'>
+              </div>
+              <p>Blured Image</p>
+              
+              <div class='img-wrapper'>
+                <img src="images/400.jpg" data-blurit data-blurit-transform='append'>
+              </div>
+              <p>Blur effect on hover</p>
+            </div>
 
             <h3>
-            <a name="development" class="anchor" href="#development"><span class="octicon octicon-link"></span></a>DEVELOPMENT</h3>
+              <a name="development" class="anchor" href="#development"><span class="octicon octicon-link"></span></a>DEVELOPMENT
+            </h3>
 
             <ul>
               <li>Install dependencies npm install</li>
