add new structure for example boxes

--- a/index.html
+++ b/index.html
@@ -115,16 +115,20 @@
             <h3>
             <a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>EXAMPLES</h3>
 
+            <p>Blured Image:</p>
+
             <div class="examples">
-              <div>
-                <img src="images/300.jpg" data-blurit data-blurit-transform='replace'>
+              <div class="example-box">
+                <div>
+                  <img src="images/300.jpg" data-blurit data-blurit-transform='replace'>
+                </div>
               </div>
-              <p>Blured Image</p>
               
-              <div class='img-wrapper'>
-                <img src="images/400.jpg" data-blurit data-blurit-transform='append'>
+              <div class="example-box">
+                <div class='img-wrapper'>
+                  <img src="images/400.jpg" data-blurit data-blurit-transform='append'>
+                </div>
               </div>
-              <p>Blur effect on hover</p>
             </div>
 
             <h3>
