fix styles for example boxes

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h3>
             <a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>EXAMPLES</h3>
 
-            <p>Blured Image:</p>
+            <p>There are two posible implementations:</p>
 
             <div class="examples">
               <div class="example-box">
