--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <!-- Less js -->
     <script src="javascripts/less-1.7.3.min.js" type="text/javascript"></script>
 
-    <!-- BlurIt js -->
-    <script async src="javascripts/build/BlurIt.min.js"></script>
-
     <!--<link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />-->
 
@@ -56,8 +53,8 @@
             <a href="https://github.com/gagoar/BlurIt" target="_blank">View project on GitHub</a>
           </div>
         </div>
-        <div class='img-wrapper'>
-          <img src="images/cats2.jpg" data-blurit data-blurit-transform='replace' class="user-image">
+        <div>
+          <img src="images/cats2.jpg" data-blurit data-blurit-transform='replace'>
         </div>
       </div>
 
@@ -157,6 +154,9 @@
     <footer>
       <p class="repo-owner"><a href="https://github.com/gagoar/BlurIt">BlurIt</a> is maintained by <a href="https://github.com/gagoar">gagoar</a>.</p>
     </footer>
-  
+    
+    <!-- BlurIt js -->
+        <script async src="javascripts/build/BlurIt.min.js"></script>
+    <!--<script async src='https://rawgithub.com/gagoar/BlurIt/master/dist/BlurIt.min.js'></script>-->
   </body>
 </html>
