--- a/index.html
+++ b/index.html
@@ -114,7 +114,19 @@
 
             <p>There are two posible implementations:</p>
 
-
+            <div class="examples">
+              <div class="example-box">
+                <div>
+                  <img src="images/300.jpg" data-blurit data-blurit-transform='replace'>
+                </div>
+              </div>
+              
+              <div class="example-box">
+                <div class='img-wrapper'>
+                  <img src="images/400.jpg" data-blurit data-blurit-transform='append'>
+                </div>
+              </div>
+            </div>
 
             <h3>
               <a name="development" class="anchor" href="#development"><span class="octicon octicon-link"></span></a>DEVELOPMENT
