fixes on location js files

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </footer>
     
     <!-- BlurIt js -->
-        <script async src="javascripts/build/BlurIt.min.js"></script>
+        <script async src="dist/BlurIt.min.js"></script>
     <!--<script async src='https://rawgithub.com/gagoar/BlurIt/master/dist/BlurIt.min.js'></script>-->
   </body>
 </html>
