put again big image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div>
-          <img src="images/300.jpg" data-blurit data-blurit-transform='replace'>
+          <img src="images/cats2.jpg" data-blurit data-blurit-transform='replace'>
         </div>
       </div>
 
